--- a/lib/microblog_web/templates/layout/app.html.eex
+++ b/lib/microblog_web/templates/layout/app.html.eex
@@ -55,9 +55,7 @@
                 </ul>
 
                 <%= if @current_user do %>
-                    <span>
-                        <!-- <%= @current_user.name %> |-->
-                    </span>
+                    <%= @current_user.name %> (@<%= @current_user.handle %>) |
                     <%= button("Log Out", to: session_path(@conn, :logout),
                         method: :delete,
                         class: "btn btn-danger mx-2") %>
