Digest, add websocket

--- a/lib/microblog_web/templates/post/edit.html.eex
+++ b/lib/microblog_web/templates/post/edit.html.eex
@@ -1,26 +1,29 @@
-<h2>Edit Post</h2>
-
-<div class="row md-4">
+<div class="row my-2">
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-2">
+                <h4 id="current-user-name"
+                    class="card-title mb-2">
                     <%= @current_user.name %>
                 </h4>
-                <h5 class="card-subtitle">
+                <h5 id="current-user-handle"
+                    class="card-subtitle">
                     @<%= @current_user.handle %>
                 </h5>
             </div>
             <div class="card-body">
                 <div class="card-text">
-                    <span><%= @current_user.email %></span></br>
+                    <span><%= @current_user.description %></span></br>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="col-md-7">
+        <h2>Edit Post</h2>
         <%= render "form.html", Map.put(assigns, :action, post_path(@conn, :update, @post)) %>
     </div>
 </div>
-<span><%= link "Back", to: post_path(@conn, :index) %></span>
+<button class="btn btn-outline-primary">
+    <%= link "Back", to: post_path(@conn, :index) %>
+</button>
