--- a/lib/microblog_web/templates/post/new.html.eex
+++ b/lib/microblog_web/templates/post/new.html.eex
@@ -2,8 +2,14 @@
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-2"><%= @current_user.name %></h4>
-                <h5 class="card-subtitle">@<%= @current_user.handle %></h5>
+                <h4 id="current-user-name"
+                    class="card-title mb-2">
+                    <%= @current_user.name %>
+                </h4>
+                <h5 id="current-user-handle"
+                    class="card-subtitle">
+                    @<%= @current_user.handle %>
+                </h5>
             </div>
             <div class="card-body">
                 <div class="card-text">
@@ -17,3 +23,6 @@
         <%= render "form.html", Map.put(assigns, :action, post_path(@conn, :create)) %>
     </div>
 </div>
+<button class="btn btn-outline-primary">
+    <%= link "Back", to: post_path(@conn, :index) %>
+</button>
