--- a/lib/microblog_web/templates/post/form.html.eex
+++ b/lib/microblog_web/templates/post/form.html.eex
@@ -1,17 +1,17 @@
-<%= form_for @changeset, @action, fn f -> %>
-  <%= if @changeset.action do %>
+<%= form_for @changeset, @action, [id: "post-form"], fn f -> %>
+<%= if @changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+        <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
-  <% end %>
+<% end %>
 
-  <div class="form-group">
+<div class="form-group">
     <%= label f, :content, class: "control-label" %>
-    <%= textarea f, :content, class: "form-control", rows: 6 %>
+    <%= textarea f, :content, class: "form-control", rows: 6, id: "post-content" %>
     <%= error_tag f, :content %>
-  </div>
+</div>
 
-  <div class="form-group">
+<div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
-  </div>
+</div>
 <% end %>
