--- a/lib/microblog_web/templates/user/show.html.eex
+++ b/lib/microblog_web/templates/user/show.html.eex
@@ -4,8 +4,14 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-8">
-                        <h4 class="card-title mb-2"><%= @user.name %></h4>
-                        <h5 class="card-subtitle">@<%= @user.handle %></h5>
+                        <h4 id="user-name"
+                            class="card-title mb-2">
+                          <%= @user.name %>
+                        </h4>
+                        <h5 id="user-handle"
+                            class="card-subtitle">
+                          @<%= @user.handle %>
+                        </h5>
                     </div>
                     <div class="col-md-4">
                         <%= if @current_user && @current_user.id == @user.id do %>
