--- a/lib/microblog_web/templates/user/show.html.eex
+++ b/lib/microblog_web/templates/user/show.html.eex
@@ -62,7 +62,7 @@
                         <p class="card-text col-md-9 my-2">
                             <%= post.content %>
                         </p>
-                        <%= if @current_user && @current_user.id == @user.id do %>
+                        <%= if @current_user && (@current_user.id == @user.id || @current_user.is_admin?) do %>
                             <%= button("Edit", to: post_path(@conn, :edit, post),
                                 method: :get,
                                 class: "btn btn-outline-primary m-1") %>
